[workspace]
resolver = "2"
members = [
    "best-time-to-buy-and-sell-stocks",
    "binary-search",
    "car-fleet",
    "close-strings",
    "daily-tempratures",
    "design-add-and-search-words-data-structure",
    "diameter-of-binary-tree",
    "generate-parentheses",
    "invert-binary-tree",
    "koko-eating-bananas",
    "largest-rectangle-area",
    "longest-repeating-character-replacement",
    "longest-substring-without-repeating-characters",
    "maximum-average-subarray",
    "maximum-depth-of-binary-tree",
    "maximum-number-of-vowels",
    "merge-sorted-arrays",
    "merge-strings-alternately",
    "merge-two-sorted-lists",
    "min-in-rotated-sorted-array",
    "number-of-islands",
    "number-of-provinces",
    "order-list",
    "reverse-linked-list",
    "search-2d-matrix",
    "search-in-rotated-sorted-array",
    "task-scheduler",
    "three-sum",
    "time-based-key-value-store",
    "max-number-of-k-sum-pairs",
    "kth-largest-element-in-an-array",
    "min-heap",
    "max-heap",
    "last-stone-weight",
]
